// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux Counter Actions produces a decrement action 1`] = `
Array [
  Object {
    "type": "DECREMENT",
  },
]
`;

exports[`redux Counter Actions produces an Increment action 1`] = `
Array [
  Object {
    "type": "INCREMENT",
  },
]
`;
